<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aydar.listnotepades.presentation.view.RegistrationActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:text="@string/registration_activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration_text_view"
            android:textSize="@dimen/registration_text_size"
            android:textAlignment="center"
            android:textStyle="normal|bold"
            android:gravity="center"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/block_height">

            <LinearLayout
                android:layout_width="@dimen/text_block_width"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/login_text_view"
                    android:layout_width="@dimen/text_view_login_width"
                    android:layout_height="@dimen/text_view_login_height"
                    android:text="@string/login"
                    android:textSize="@dimen/login_text_size"
                    android:textStyle="normal|bold"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"/>

                <TextView
                    android:id="@+id/password_text_view"
                    android:layout_width="@dimen/text_view_password_width"
                    android:layout_height="@dimen/text_view_password_height"
                    android:text="@string/password"
                    android:textSize="@dimen/password_text_size"
                    android:textStyle="normal|bold"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/login_edit_text"
                    android:layout_width="@dimen/edit_text_login_width"
                    android:layout_height="@dimen/edit_text_login_height"
                    android:ems="10"
                    android:hint="@string/login"
                    android:layout_weight="0.5"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/password_edit_text"
                    android:layout_width="@dimen/edit_text_password_width"
                    android:layout_height="@dimen/edit_text_password_height"
                    android:ems="10"
                    android:hint="@string/password"
                    android:layout_weight="0.5"
                    android:inputType="textPassword" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:text="@string/button_confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/confirm_button"
            android:layout_gravity="center"
            android:onClick="addUserClick"/>

    </LinearLayout>
</RelativeLayout>
