<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_note"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.aydar.listnotepades.presentation.view.NoteActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name"
            android:ems="10"
            android:id="@+id/name_note_edit_text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/edit_note_height"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/content_edit_text"
            android:gravity="top"/>

        <Button
            android:text="@string/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/save_button"
            android:onClick="saveContentNoteOnClick"/>

        <Button
            android:text="@string/delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete_button"
            android:onClick="deleteCurrentNoteOnClick"/>
    </LinearLayout>
</RelativeLayout>
